[project]
name = "langmem0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1,<2",
    "langchain-openai>=1.1.6",
    "mem0ai>=1.0.1",
    "pydantic>=2.12.5",
]

[tool.setuptools]
packages.find.where = ["src"]

[tool.uv.workspace]
members = [
    "examples",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.6.2",
]
